# ObjectStore

./: .clang-tidy  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmake/: Install.cmake  SosConfig.cmake
examples/: CMakeLists.txt  basic_use.cpp  hello_world.cpp
include/sos/: sos.h
tests/: CMakeLists.txt  test_existance.cpp  test_refcounting.cpp
tests/libs/catch2/: Catch.cmake  CatchAddTests.cmake
